# pybana

./: .gitignore  CITATION.cff  Dockerfile  LICENSE.Custom-MIT-LICENSE-for-UPE  LICENSE.MIT  Makefile  README.md  Vagrantfile  compose.yml  requirements.txt
.github/workflows/: afw.yml  arc-ci.yml  pyarrow.yml
app/: afw.py  main.py
dags/: afw.py  example-2.py  example.py  livy-kernels.sh  main.py  pyproject.toml  test-1.py
dags/dag-db/: minioreader.py
dags/pyarrow-livy-dag/: pyarrow_livy_test.ipynb
deploy/: full_afw.yaml
deploy/airflow/: Dockerfile  airflowingress.yaml  ingress.yaml  logs-pvc.yaml  values.yaml
deploy/infra/: kong.tf
deploy/net/: Dockerfile
deploy/net-lb/: checkport.lua
deploy/openebs/: openEBS_StorageClass.yaml
deploy/secrets/: Dockerfile.vault
deploy/spark/: values.yaml
deploy/sparkmagic/: Dockerfile
scripts/: Dockerfile  afw_gitsync.sh  airflowpvc.sh  arc-set.sh  ccr.sh  fuzz_ffuf.sh  ilum.sh  k3s.sh  k8s.sh  k9s-monitor.sh  knock.sh  kubeso.sh  runner-set.sh  startscala.sh  sync-repos.sh  tools.sh
scripts/apache-spark/: build-pyarrow-livy.sh  fixer-redacted.sh  fixilum.sh  ilum-prod-proto.sh  minio-setup.sh  test-mongo.sh  vscodium-web.sh
scripts/appsec/: tableReader.pl
scripts/auth/: fix-keycloak.sh  full-sso.sh  sso.sh
scripts/ci-cd/: arc-set.sh  wrapper-tests.sh
scripts/databases/: fixai-qdrant.sh  ping-minio.sh  qdrant.sh
scripts/kubernetes/: argocd.sh  k8s.sh  kuard.sh  set-harbor.sh  set-registry.sh
scripts/monitoring/: dashboard.sh
scripts/private-registry/: registry.sh
tests/: invoker.py
(+61 files in other folders)
