[build-system]
requires = [
    "hatchling>=1.27.0",
    ]
build-backend = "hatchling.build"

# requires = [ "setuptools>=77.0.3" ]
# build-backend = "setuptools.build_meta"


[project]
name = "spark_wrapper"
version = "1.0.0"
requires-python = ">=3.10"

dependencies = [
	"setuptools==77.0.3",
	"environs==14.1.1",
	"pylint==3.3.5",
	"pytest==8.3.5",
	"pyspark==3.5.5",
	"pandas==2.2.3",
	"pyarrow==19.0.1",
	"grpcio==1.71.0",
	"protobuf==5.29.4",
	"grpcio-status==1.71.0",
	"krb5==0.7.1",
	"gssapi==1.9.0",
	"psutil==7.0.0",
	"sparkmagic==0.22.0",
	"sqlalchemy==2.0.40",
	"s3fs==2025.3.2",
	"unidecode==1.3.8",
	"papermill==2.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["spark_wrapper"]
