[build-system]
requires = [
    "hatchling>=1.30.1",
    ]
build-backend = "hatchling.build"

# requires = [ "setuptools>=77.0.3" ]
# build-backend = "setuptools.build_meta"


[project]
name = "spark_wrapper"
version = "1.0.0"
requires-python = ">=3.10"

dependencies = [
	"setuptools==82.0.1",
	"environs==15.0.1",
	"pylint==4.0.6",
	"pytest==9.1.1",
	"pyspark==4.1.2",
	"pandas==3.0.4",
	"pyarrow==24.0.0",
	"grpcio==1.81.1",
	"protobuf==7.35.1",
	"grpcio-status==1.81.1",
	"krb5==0.9.0",
	"gssapi==1.11.1",
	"psutil==7.2.2",
	"sparkmagic==0.23.0",
	"sqlalchemy==2.0.51",
	"s3fs==2026.6.0",
	"unidecode==1.4.0",
	"papermill==2.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["spark_wrapper"]
